# guswitch

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: command.rs  config.rs  lib.rs  opts.rs  prompt.rs  table.rs
