[package]
name = "guswitch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
inquire = "0.7.5"
serde = { version = "1.0.215", features = ["derive"] }
tabled = "0.20.0"
toml = "0.8.19"

[dev-dependencies]
testing_table = "0.3.0"
